--- a/src/main/java/View/TestatErstellenAufgabenPreview.form
+++ b/src/main/java/View/TestatErstellenAufgabenPreview.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="8" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="524"/>
+      <xy x="20" y="20" width="506" height="524"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -65,8 +65,8 @@
           <component id="fb055" class="javax.swing.JLabel" binding="lblPunktzahlWert">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                <minimum-size width="40" height="-1"/>
-                <preferred-size width="40" height="-1"/>
+                <minimum-size width="100" height="-1"/>
+                <preferred-size width="100" height="-1"/>
               </grid>
             </constraints>
             <properties>
@@ -76,8 +76,8 @@
           <component id="294f6" class="javax.swing.JLabel" binding="lblBearbeitungszeitWert">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                <minimum-size width="40" height="-1"/>
-                <preferred-size width="40" height="-1"/>
+                <minimum-size width="100" height="-1"/>
+                <preferred-size width="100" height="-1"/>
               </grid>
             </constraints>
             <properties>
@@ -89,15 +89,18 @@
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Label"/>
+              <text value="Aufgabentyp: "/>
             </properties>
           </component>
-          <component id="cfa32" class="javax.swing.JLabel">
+          <component id="cfa32" class="javax.swing.JLabel" binding="lblAufgabentypWert">
             <constraints>
-              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                <minimum-size width="100" height="-1"/>
+                <preferred-size width="100" height="-1"/>
+              </grid>
             </constraints>
             <properties>
-              <text value="Label"/>
+              <text value="&quot;Einfachantwort&quot;"/>
             </properties>
           </component>
         </children>
